# futhark-website

./: .gitignore  .travis.yml  README.md  acknowledgements.md  cabal.project  cabal.project.freeze  default.nix  deploy.sh  docs.md  docs.rst  examples.md  examples.rst  futhark-website.cabal  getinvolved.md  getinvolved.rst  hedgehogs.md  index.md  index.rst  license.md  literate.mk  performance.md  performance.rst  publications.md  publications.rst  robots.txt  shell.nix  site.hs  stack.yaml  tiling.md  watch.sh
benchmarks/: .gitignore  Makefile  README.md  style.gnuplot
blog/: .gitignore  2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  2016-04-10-futhark-and-pyopencl.rst  2016-04-15-futhark-and-pyopencl.rst  2016-04-20-futhark-and-pygame.rst  2016-04-25-futhark-and-pygame.rst  2016-06-20-futhark-as-an-apl-compiler-target.rst  2016-09-03-language-design.rst  2016-12-04-diving-beet.rst  2016-12-09-two-syntax-design-problems.rst  2016-12-28-futhark-at-fosdem.rst  2017-01-15-futhark-at-lambdadays.rst  2017-01-25-futhark-module-system.rst  2017-03-06-futhark-record-system.rst  2017-03-21-futhark-videos.rst  2017-04-01-roman-numerals.rst  2017-05-23-language-design-checklist.rst  2017-06-25-futhark-at-pldi.rst  2017-07-25-futhark-at-pldi.rst  2017-09-26-calling-futhark-from-c-and-haskell.rst  2017-10-04-futhark-0.1.0-released.rst  2017-10-10-block-comments-are-a-bad-idea.rst  2017-10-26-calling-futhark-from-c-and-haskell.rst  2017-11-11-dot-notation-for-records.rst  2017-11-19-futhark-0.2.0-released.rst  2017-12-05-a-strategy-for-documenting-futhark.rst  2017-12-27-reflections-on-a-phd-accidentally-spent-on-language-design.rst  2018-01-28-how-futhark-manages-gpu-memory.rst  2018-02-02-futhark-0.3.0-released.rst  2018-04-01-futhark-with-fangs.rst  2018-04-10-futhark-0.4.0-released.rst  2018-05-31-futhark-0.5.1-released.rst  (+118 more)
css/: default.css  (+1 more)
(+202 files in other folders)
